--- a/Dark+.theme.css
+++ b/Dark+.theme.css
@@ -14,15 +14,15 @@
 
 :root {
   --darkplus-bg: #212121;
-  --darkplus-bg2: #302f2f;
-  --darkplus-sec: #bb86fc;
-  --darkplus-links: #cdaef3;
-  --darkplus-home-icon: url(https://cdn.discordapp.com/attachments/468141324906921984/852117175212179466/discord-avatar-512-YV0PV.png);
- --watermark-filter-invert: 0%;
-  --watermark-filter-sepia: 50%;
-  --watermark-filter-saturate: 3000%;
-  --watermark-filter-hue-rotate: 210deg;
-  --watermark-filter-brightness: 70%;
-  --watermark-filter-contrast: 200%;
-  --darkplus-emoji-picker-color: 210deg;
+  --darkplus-bg2: #212121;
+  --darkplus-sec: #bb6100;
+  --darkplus-links: #bb6100;
+  --darkplus-home-icon: url(https://cdn.discordapp.com/attachments/656575904289390624/1129073028886708295/orange_discord_avatar.png);
+ --watermark-filter-invert: 0;
+  --watermark-filter-sepia: 0;
+  --watermark-filter-saturate: 0;
+  --watermark-filter-hue-rotate: 0deg;
+  --watermark-filter-brightness: 0;
+  --watermark-filter-contrast: 0;
+  --darkplus-emoji-picker-color: 320deg;
 }
